# auraboot

./: .claude  .designer-boundary.json  .dockerignore  .docs-governance.json  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE-FAQ-en.md  LICENSE-FAQ.md  LICENSE.txt  NOTICE  OSS_E2E_TASKS.md  README.md  SECURITY.md  SMOKE_SKIP_AUDIT.md  TELEMETRY.md  USAGE-FAQ.md  docker-compose.cleanup-batch.override.yml  docker-compose.dev.yml  docker-compose.e2e.override.yml  docker-compose.ga-e2e.override.yml  docker-compose.isolated.yml  docker-compose.microservice.yml  docker-compose.monolith.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.pull.yml  docker-compose.skills-c2.override.yml  docker-compose.skills-c4.override.yml  docker-compose.yml  gradlew  oss-scope.json  package.json  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-notes-template.md
airflow-provider/: README.md  pyproject.toml
airflow-provider/examples/: salesforce_daily_to_auraboot.py
airflow-provider/src/airflow_provider_auraboot/: __init__.py
airflow-provider/src/airflow_provider_auraboot/hooks/: __init__.py  auraboot.py
airflow-provider/src/airflow_provider_auraboot/operators/: __init__.py  command.py  connector_sync.py  semantic_query.py
airflow-provider/src/airflow_provider_auraboot/sensors/: __init__.py  command_status.py  sync_complete.py
airflow-provider/src/airflow_provider_auraboot/webhooks/: __init__.py  sign.py
airflow-provider/tests/: __init__.py  test_hook.py  test_operators.py  test_sensors.py  test_webhook_sign.py
docker/: README.md
docs/: README.md  positioning.md  widget-inventory-2026-04-15.md
golden/: GENERATED-test-matrix.md  release.sh  run-meta-gates.sh  test-catalog.json
platform/: .dockerignore  .gitignore  (+7 more)
(+12001 files in other folders)
